[tool.poetry]
name = "dagnet"
version = "0.1.0"
description = ""
authors = ["BananaJam <vladbyn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
bs4 = "^0.0.1"
discord = "^1.0"
youtube-dl = "^2020.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
